<resources>
    <string name="app_name">Fidertime</string>
    <string name="action_settings" translatable="false">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="status" translatable="false">Status</string>
    <string name="message">Message</string>
    <string name="contact">Contact</string>
    <string name="profile">Profile</string>
    <string name="title_activity_files_list_recycler_view_adapter" translatable="false">FilesListRecyclerViewAdapter
    </string>
    <string name="register_here">Register Here</string>
    <string name="new_user">New User?</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="login_here">Login Here</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="email">Email</string>

    <!-- VALIDATION -->
    <string name="email_null_validation">Email cannot be null</string>
    <string name="email_not_valid_validation">Email not valid</string>

    <string name="name_null_validation">Name cannot be null</string>
    <string name="name_length_validation">Name must be more than 5 characters</string>
    <string name="name_unique_validation">Name has already taken</string>

    <string name="phone_number_null_validation">Phone Number cannot be null</string>
    <string name="phone_number_starts_validation">Phone Number must starts with +62</string>
    <string name="phone_number_unique_validation">Phone Number has already taken</string>

    <string name="password_null_validation">Password cannot be null</string>
    <string name="password_number_length_validation">Password must be more than 5 characters</string>

    <string name="bio_length_validation">Bio must be less than 200 characters</string>

    <string name="authentication_failed">Authentication Failed</string>

    <string name="invalid_credential">INVALID CREDENTIAL</string>

    <string name="Add_Member_Group_Validation">Please Choose A Member First</string>
    <string name="Group_Name_Validation">Group Name Cannot Be Empty</string>
    <string name="Group_Description_Validation">Group Description Cannot Be Empty</string>
    <string name="Group_Image_Validation">Please Enter A Group Image</string>

    <!--  PROGRESS  -->
    <string name="please_wait">Please Wait...</string>
    <string name="progress">Progress...</string>

    <!-- SUCCESS  -->
    <string name="success_register">Success Register</string>

    <string name="cancel">Cancel</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="enter_message">Enter Message</string>
    <string name="register_your_phone_number">Register your phone number</string>

    <string name="search">Search</string>
    <string name="pinned_message">Pinned Message</string>
    <string name="log_out">Log out</string>
    <string name="sent_an">Sent an</string>
    <string name="sent_a">Sent a</string>

    <string name="success_remove_member">Successfully removed member</string>
    <string name="success_leave_group">Successfully leave the group</string>

    <!--  STATUS  -->
    <string name="last_seen">Last Seen </string>
    <string name="notification">Notification</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="admin">Admin</string>
    <string name="member">Member</string>
    <string name="online">Online</string>
    <string name="read">Read</string>
    <string name="readBy">Read By</string>
    <string name="sent_an_image">sent an image</string>


    <!-- TAB LAYOUT -->
    <string name="all">All</string>
    <string name="personal">Personal</string>
    <string name="group">Group</string>
    <string name="media">Media</string>
    <string name="file">Files</string>
    <string name="link">Links</string>
    <string name="title_activity_create_group_acitvity" translatable="false">CreateGroupAcitvity</string>
    <string name="title_activity_create_group" translatable="false">CreateGroupActivity</string>
    <string name="create">Create</string>
    <string name="create_group">Create Group</string>
    <string name="add_participant">Add Participant</string>
    <string name="back">back</string>
    <string name="description">Description</string>s
    <string name="group_name">Group Name</string>
    <string name="group_description">Group Description</string>
    <string name="leave_group">Leave Group</string>
    <string name="choose_a_new_admin">Choose A New Admin</string>
    <string name="username">Username</string>
    <string name="name_contains_space_validation">Username can not contains space</string>
    <string name="username_unique_validation">Username must be unique</string>

    <string name="members">members</string>
    <string name="login">Login</string>

</resources>