<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:theme="@style/Theme.Fidertime"
    android:id="@+id/message_toolbar_actionbar"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@color/secondary_color"
    android:gravity="center"
    app:contentInsetStartWithNavigation="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:gravity="center"
            android:backgroundTint="@color/ascent_color"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            />

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:gravity="center"
                android:text="@string/add_participant"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/current_number_of_participant"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="0"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text=" / "
                    />

                <TextView
                    android:id="@+id/number_of_participant"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:gravity="center"
                    android:text="125"
                    />
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:id="@+id/next_button"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/next"
            android:gravity="center"
            android:backgroundTint="@color/ascent_color"
            android:textColor="@color/white"
            android:layout_marginRight="10dp"
            />

    </LinearLayout>

</RelativeLayout>